# copul

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
copul/: __init__.py  basictools.py  cd1_wrapper.py  cd2_wrapper.py  cdf_wrapper.py  chatterjee.py  copula_sampler.py  data_uniformer.py  double_stochastic_matrix.py  email_notifier.py  exceptions.py  family_list.py  foci.py  numerics.py  star_product.py  sympy_wrapper.py
copul/checkerboard/: bernstein.py  biv_bernstein.py  biv_block_diag_mixed.py  biv_check_min.py  biv_check_mixed.py  biv_check_pi.py  biv_check_w.py  check.py  check_min.py  check_pi.py  checkerboarder.py  matrix.py  shuffle_min.py
copul/families/: __init__.py  abstract_copula.py  abstract_multivar_copula.py  bivcopula.py  chatterjee_plotter.py  cis_verifier.py  copula.py  copula_builder.py  copula_graphs.py  copula_sampler.py  core_copula.py  helpers.py  rank_correlation_plotter.py  tp2_verifier.py
copul/family/: copula_builder.py  copula_graphs.py  rank_correlation_plotter.py  tp2_verifier.py
copul/schur_order/: bounds_from_xi.py  checkerboarder.py  cis_rearranger.py  cis_verifier.py  ltd_verifier.py  plod_verifier.py  schur_order_verifier.py  (+1 more)
docs/: requirements.txt
notes/: 2025-06-13-verifying-zhang.py  extreme_ci_copulas.py
tests/: conftest.py  family_representatives.py  test_basictools.py  test_chatterjee.py  test_checkerboarder.py  test_copula_sampler.py  test_data_uniformer.py  test_family_list.py  test_helpers.py  test_rvs.py  test_tail_dependence_measures.py
(+624 files in other folders)
