[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copul"
version = "0.1.1"
description = "Risk analysis with copulas."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Marcus Rockel", email = "marcus.rockel@finance.uni-freiburg.de"},
    {name = "Eva Lütkebohmert-Holtz", email = "eva.luetkebohmert@finance.uni-freiburg.de"},
    {name = "Jonathan Ansari", email = "jonathan.ansari@plus.ac.at"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2",
    "sympy>=1.13",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "sympy-plot-backends>=3.1",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "black>=24.8",
    "build>=0.10.0",
    "isort>=6.0.0",
    "jupyter>=1.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pytest-cov>=5.0.0",
    "pytest-pycharm>=0.7.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "sphinx-rtd-theme>=2.0",
    "sphinx>=7.4",
]

[project.urls]
"Repository" = "https://github.com/Corrram/copul"
"Documentation" = "https://copul.readthedocs.io"
"Issue Tracker" = "https://github.com/Corrram/copul/issues"

[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "INFO"
#adopts = "-ra -q"